@@ -75,16 +75,16 @@ class RecipeRunStatsTest implements RewriteTest {
               assertThat(rows)
                 .as("Running a single recipe on a single source should produce a single row in the RecipeRunStats table")
                 .hasSize(1);
-              RecipeRunStats.Row row = rows.get(0);
+              RecipeRunStats.Row row = rows.getFirst();
               assertThat(row.getRecipe()).endsWith("RecipeWithApplicabilityTest");
               assertThat(row.getSourceFiles())
                 .as("Test framework will invoke the recipe once when it is expected to make a change, " +
                     "then once again when it is expected to make no change")
                 .isEqualTo(2);
-              assertThat(row.getEditMax()).isGreaterThan(0);
-              assertThat(row.getEditTotalTime())
+              assertThat(row.getEditMaxNs()).isGreaterThan(0);
+              assertThat(row.getEditTotalTimeNs())
                 .as("Cumulative time should be greater than any single visit time")
-                .isGreaterThan(row.getEditMax());
+                .isGreaterThan(row.getEditMaxNs());
           }),
           text("samuel", "sam")
         );
